fix z-index issues with actionable tiles (again)

--- a/packages/itwinui-css/src/tile/tile.scss
+++ b/packages/itwinui-css/src/tile/tile.scss
@@ -225,7 +225,7 @@ $thumbnail-selector: ':is(.iui-thumbnail-icon, .iui-tile-thumbnail-picture)';
   &,
   > .iui-link-action {
     width: 100%;
-    z-index: 0;
+    z-index: 1;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -323,7 +323,7 @@ $thumbnail-selector: ':is(.iui-thumbnail-icon, .iui-tile-thumbnail-picture)';
 @mixin iui-tile-thumbnail-button($variant) {
   @include iui-button-borderless;
   @include iui-button-size(small, borderless);
-  z-index: 1;
+  z-index: 2;
   border-radius: 50%;
   margin-top: calc(var(--iui-size-s) * 0.5);
   margin-inline: var(--iui-size-xs);
@@ -368,7 +368,7 @@ $thumbnail-selector: ':is(.iui-thumbnail-icon, .iui-tile-thumbnail-picture)';
 }
 
 @mixin iui-tile-buttons {
-  z-index: 1;
+  z-index: 2;
   display: flex;
   flex-shrink: 0;
   user-select: none;
@@ -401,7 +401,7 @@ $thumbnail-selector: ':is(.iui-thumbnail-icon, .iui-tile-thumbnail-picture)';
 }
 
 @mixin iui-tile-more-options {
-  z-index: 1;
+  z-index: 2;
   grid-area: 1 / 1 / -1 / -1;
   position: absolute;
   place-self: end;
